@@ -6,6 +6,10 @@ Version 0.4
 		InsertPages - insert a range of pages from one document to another
 		DeletePages - delete a range of pages
 	Added new tool podofomerge for merging two PDFs together
+	Added methods to get & set a document's PageMode
+	Added methods to set a document's FullScreen mode
+	Added methods to set all the various ViewerPreferences for a document
+	Added methods to set the document's PageLayout
 	
 	
 Version 0.3
